[package]
name = "argon2-wasm"
version = "0.1.0"
authors = ["L4ngu0r <stew.roulleau@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
dotenv = "0.15.0"
obfstr = "0.2.4"

[dependencies]
rust-argon2 = { version = "0.8", default-features = false }
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 3
